--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^6.9.0",
     "mysql": "^2.18.1",
     "pg": "^8.13.0",
+    "stats.js": "^0.17.0",
     "stripe": "^17.3.1",
     "three": "^0.166.1",
     "vite-plugin-commonjs": "^0.10.3",
